--- a/posts/20250117.md
+++ b/posts/20250117.md
@@ -1,7 +1,6 @@
 ---
 title: "See you at OSM26"
 date: 2026-01-17
-slug: some-more-text
 excerpt: "Hope to see you at AGU Ocean Science Meeting 2026! Stop by our posters on Monday and Wednesday in Hall 4"
 longform: true
 ---
@@ -12,4 +11,4 @@ We will be at [Ocean Science Meeting 2026](https://www.agu.org/ocean-sciences-me
 
 - Luke will be presenting his poster *"What Drives Regional Uncertainty in the Air-Sea CO2 Flux?"*  on Wednesday, 25 February in Hall 4 from 4:00-6:00
 
-Stop by our posters if you would like to chat!
+We hopt to see you there!
