--- a/posts/20250117.md
+++ b/posts/20250117.md
@@ -11,4 +11,4 @@ We will be at [Ocean Science Meeting 2026](https://www.agu.org/ocean-sciences-me
 
 - Luke will be presenting his poster *"What Drives Regional Uncertainty in the Air-Sea CO2 Flux?"*  on Wednesday, 25 February in Hall 4 from 4:00-6:00
 
-We hopt to see you there!
+We hope to see you there!
